2010-01-06  Peter Schueller  <ps@kr.tuwien.ac.at>

	* include/dlvhex/Makefile.am: Installing one more header.
	* dlvhex/trunk/dlvhex.pc.in: Added bindir to packageconfig file.

2009-12-18  Peter Schueller  <ps@kr.tuwien.ac.at>

	* include/dlvhex/Makefile.am: Installing more headers.
	* src/dlvhex/Component.cpp: Fixing/improving verbose output.
	* src/dlvhex/DLVProcess.cpp: Likewise.

2009-10-28  Peter Schueller  <ps@kr.tuwien.ac.at>

	* include/dlvhex/HexGrammar.h: Fixing bug with empty input.
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Likewise.
	* examples/empty.hex: Likewise.
	* examples/tests/empty.out: Likewise.
	* examples/tests/dlvhextests.test: Likewise.

2009-09-23  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* m4/boost.m4: Fix for autoconf 2.64 (see also
	http://lists.gnu.org/archive/html/bug-autoconf/2009-08/msg00054.html).

2009-09-02  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/dlvhex/Component.cpp: Clearing result bevore reevaluating
	component. This increases performance.

2009-09-01  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/dlvhex/GraphProcessor.cpp: Added/improved debug output.
	* src/dlvhex/dlvhex.cpp: Likewise.
	* include/dlvhex/Atom.h: Added TODOs.

2009-08-28  Peter Schueller  <ps@kr.tuwien.ac.at>

	* examples/weak2.hex: Changing testcase s.t. ordering of
	answer sets with same weight no longer poses a problem.
	* examples/tests/weak2.out: Likewise.

2009-08-27  Peter Schueller  <ps@kr.tuwien.ac.at>

	* include/dlvhex/HexGrammar.tcc: Adding TODO.

	* examples/percentparser.hex: Adding testcase for % parsing.
	* examples/tests/percentparser.out: Likewise.
	* examples/tests/dlvhextests.test: Likewise.
	* examples/Makefile.am: Likewise.

	* examples/tests/weak2.out: Fixing ordering of answer sets.

2009-08-24  Peter Schueller  <ps@kr.tuwien.ac.at>

	* configure.ac: Requiring boost >= 1.37, as it contains the
	important fix https://svn.boost.org/trac/boost/changeset/49234
	to the position_iterator.
